test/spec_vectors/simd_bit_shift/fail/module_12.wat
(module (func (result v128) (i64x2.shr_s (i32.const 0) (i32.const 0))))